--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    "jsx": "react-jsx",               
+    "noUnusedLocals": false,          // Ignore unused imports
+    "noUnusedParameters": false       // Ignore unused function args
   }
 }
