--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,4 +17,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
     
+    location /thumbnails/ {
+        proxy_pass http://backend:3000/thumbnails/;
+    }
 }
